# calendar_converter

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  QUERY_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
data/: dila_test_data.json
data/scripts/: add_vietnamese.py  build_db.py  fetch_dila_test_data.py
src/calendar_converter/: api.py  converter.py  db.py  mcp_http.py  mcp_server.py  models.py  parser.py
tests/: test_api.py  test_cbdb_verification.py  test_converter.py  test_dila_verification.py  test_mcp.py  test_parser.py
